@@ -26,6 +26,7 @@ presolve.maxrounds = -1 : maximal number of rounds (-1: unlimited, 0: cleanup)
 
 ### Data structures
 
+Statistics have a bool variable matrix_modified_directly_by_presolvers (does not include deletion of constraints nor substitutions)
 
 Unit tests
 ----------
